# changeling

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
changeling/: __init__.py  app.py  db.py  demo.py  foxfire.py  grimoire.py  html_weaving.py  middleware.py  orrery.py  thornwatch.py  weaving.py
config/: grimoire.toml
scripts/: simulate_attack.py
tests/: conftest.py  test_e2e.py  test_foxfire.py  test_html_weaving.py  test_middleware.py  test_weaving.py
